# claw-erp

./: CONTRIBUTING.md  Cargo.toml  Cats.db  README.md
src/: database.rs  main.rs  utils.rs
src/menus/: mod.rs  products.rs  sales.rs
