[package]
name = "claw-erp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-table = "0.4.7"
crossterm = "0.25.0"
tokio = { version = "1.23.0", features = ["macros"] }

[dependencies.sqlx]
version = "0.6"
features = ["runtime-tokio-rustls", "sqlite", "postgres"]
